Flex-grid align items fix

--- a/src/multi_monitor/static/styles/_base.css
+++ b/src/multi_monitor/static/styles/_base.css
@@ -68,8 +68,7 @@ h6 {
 .flex-grid {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: space-between;
   gap: var(--spacing--4);
   max-width: 600px;
 
